# olist_project

./: .env.example  .gitignore  README.md  check_connection.py  ingest.py  main.py  pyproject.toml
.github/workflows/: dbt-parse.yml
notebooks/: eda.ipynb
notebooks/html_reports/: category_translation.html  customers.html  geolocation.html  order_items.html  order_payments.html  order_reviews.html  orders.html  products.html  sellers.html
notebooks/html_reports/comparison_reports/: category_translation_cleaned_comparison.html  customers_cleaned_comparison.html  geolocation_cleaned_comparison.html  order_items_cleaned_comparison.html  order_payments_cleaned_comparison.html  order_reviews_cleaned_comparison.html  orders_cleaned_comparison.html  products_cleaned_comparison.html  sellers_cleaned_comparison.html
notebooks/info/: category_translation.txt  customers.txt  geolocation.txt  order_items.txt  order_payments.txt  order_reviews.txt  orders.txt  products.txt  sellers.txt  tables.txt
notebooks/power_bi_exports/: dim_date.csv  dim_geolocation.csv  dim_product.csv  dim_seller.csv  fact_seller_month.csv
olist_proj_dbt/: README.md  dbt_project.yml  profile_template.yml
olist_proj_dbt/models/marts/: dim_customer.sql  dim_date.sql  dim_geolocation.sql  dim_order.sql  dim_payments.sql  dim_product.sql  dim_seller.sql  fact_sales.sql  fact_seller_month.sql  marts_schema.yml
olist_proj_dbt/models/staging/: sources.yml  stg_olist__orders.sql  (+9 more)
olist_proj_dbt/tests/: assert_delivery_after_purchase.sql  assert_months_active_positive.sql  assert_non_negative_amounts.sql
