[project]
name = "olist-project"
version = "0.1.0"
description = "Data preprocessing pipeline for Power BI visualization."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.3",
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "kagglehub>=1.0.2",
    "pandas>=3.0.3",
    "polars>=1.42.1",
    "pyodbc>=5.3.0",
    "sqlalchemy>=2.0.51",
]
