[project]
name = "olist-project"
version = "0.1.0"
description = "Data preprocessing pipeline for Power BI visualization."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.3",
    "dbt-sqlserver[pyodbc]>=1.10.0",
    "dotenv>=0.9.9",
    "fg-data-profiling>=4.19.1",
    "ipykernel>=7.3.0",
    "kagglehub>=1.0.2",
    "pandas>=2.0,<3.0",
    "polars>=1.42.1",
    "pyarrow>=24.0.0",
    "pyodbc>=5.3.0",
    "setuptools>=65,<70",
    "sqlalchemy>=2.0.51",
]
